use futures::Stream;
use std::pin::Pin;
tonic::include_proto!("sirsi.aws.v1");

use crate::error::{AgentError, AgentResult};

pub struct AwsAgentService;

#[tonic::async_trait]
impl aws_agent_server::AwsAgent for AwsAgentService {
    async fn discover_resources(
        &self,
        request: tonic::Request<DiscoverResourcesRequest>,
    ) -> Result<tonic::Response<DiscoverResourcesResponse>, tonic::Status> {
        let req = request.into_inner();
        // Implement AWS resource discovery logic
        Ok(tonic::Response::new(DiscoverResourcesResponse {
            resources: vec![],
            resource_counts: std::collections::HashMap::new(),
            warnings: vec!["Not implemented".to_string()],
        }))
    }

    async fn analyze_resources(
        &self,
        request: tonic::Request<AnalyzeResourcesRequest>,
    ) -> Result<tonic::Response<AnalyzeResourcesResponse>, tonic::Status> {
        let req = request.into_inner();
        // Implement AWS resource analysis logic
        Ok(tonic::Response::new(AnalyzeResourcesResponse {
            analyses: vec![],
            risks: vec![],
            recommendations: vec!["Not implemented".to_string()],
        }))
    }

    async fn generate_migration_plan(
        &self,
        request: tonic::Request<GenerateMigrationPlanRequest>,
    ) -> Result<tonic::Response<GenerateMigrationPlanResponse>, tonic::Status> {
        let req = request.into_inner();
        // Implement AWS migration planning logic
        Ok(tonic::Response::new(GenerateMigrationPlanResponse {
            plan: Some(MigrationPlan {
                id: "plan-id".to_string(),
                name: "Migration Plan".to_string(),
                strategy: MigrationStrategy::MIGRATION_STRATEGY_UNSPECIFIED as i32,
                phases: vec![],
                dependencies: vec![],
                parameters: std::collections::HashMap::new(),
            }),
            phases: vec![],
            prerequisites: vec!["Not implemented".to_string()],
            estimated_metrics: std::collections::HashMap::new(),
        }))
    }

    async fn estimate_costs(
        &self,
        request: tonic::Request<EstimateCostsRequest>,
    ) -> Result<tonic::Response<EstimateCostsResponse>, tonic::Status> {
        let req = request.into_inner();
        // Implement AWS cost estimation logic
        Ok(tonic::Response::new(EstimateCostsResponse {
            estimates: vec![],
            total_by_service: std::collections::HashMap::new(),
            cost_factors: vec!["Not implemented".to_string()],
            optimization_suggestions: vec![],
        }))
    }
}
